Mobile Alignment Fixes

--- a/ithamor-landing/less/style.less
+++ b/ithamor-landing/less/style.less
@@ -135,7 +135,7 @@ header {
 		margin: 0 auto 20px;
 	}
 	.intro-text {
-		opacity: 0.9;
+		opacity: 0.6;
 		.step-2{
 			visibility: hidden;
 		}
@@ -253,10 +253,7 @@ header {
 }
 
 #media{
-	background: url(../img/media-back.svg) no-repeat;
-	background-repeat: no-repeat;
-	background-position: right; 
-
+	background: url(../img/product-offer/back-grain.svg);
 	height: 100%;
 }
 
@@ -314,24 +311,12 @@ form .row:first-child .floating-label-form-group {
 
 footer {
 	color: @brand-success;
+	background: white;
 	ul{
 		text-transform: uppercase;
 		text-align: justify;
 	}
-	h3 {
-		margin-bottom: 30px;
-	}
-	.footer-above {
-		padding-top: 50px;
-		background-color: @brand-primary;
-	}
-	.footer-col {
-		margin-bottom: 50px;
-	}
-	.footer-below {
-		padding: 25px 0;
-		background-color: darken(@brand-primary, 5%);
-	}
+
 }
 
 .btn-social {
@@ -448,23 +433,12 @@ footer {
 			}
 		}
 #track-outer{
-			width:100%;
- 			height: 300px;
- 			background: #FFF;
-
+		background: white;
+		height:10%;
 	    #track{	
- 			width:100%;
- 			height: 300px;
- 		
-
+ 			display:none;
 	        #track-inner{
-	        	left:0px;
-	        	height: 300px;
-
-	        	button:
-	        	float: right;
-	      
-
+	        	display:none;
 	        }
  		}
  	}
@@ -485,7 +459,6 @@ footer {
 
 
 .ch-grid {
-    margin: 20px 0 0 0;
     padding: 0;
     list-style: none;
     display: block;
