--- a/ithamor-landing/less/variables.less
+++ b/ithamor-landing/less/variables.less
@@ -8,13 +8,9 @@
     src: url(../fonts/HelveticaLTStd-BoldCond.otf);
 }
  
-@font-face {
-    font-family: DolceVitaLight;
-    src: url('../fonts/Dolce Vita.ttf');
-}
 
 @brand-primary:  lighten(#000, 93.5%);
 @brand-success: #0073c6;
 @gray-lighter: lighten(#000, 93.5%);
 @font-family: HelveticaLight, "Helvetica Neue", Helvetica, Arial, sans-serif;
-@font-family-bold-cond: 'Rajdhani', DolceVitaLight, HelveticaBoldCond, "Helvetica Neue", Helvetica, Arial, sans-serif;
+@font-family-bold-cond:  HelveticaLight, "Helvetica Neue", Helvetica, Arial, sans-serif;
